# zia

./: CMakeLists.txt  README.txt  badAPI.cpp  badAPI.hpp  conanfile.txt  main.cpp  zia.cpp  zia.hpp
BoostServer/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
api/: module.hpp
api/examples/: config.yaml  mine.yaml
api/http/: connection.hpp  response.hpp
modules/connection/: CMakeLists.txt  ModuleConnection.cpp  ModuleConnection.hpp
modules/html/: CMakeLists.txt  ModuleHtml.cpp  ModuleHtml.hpp
modules/php/: CMakeLists.txt  ModulePhp.cpp  ModulePhp.hpp
modules/routehandler/: CMakeLists.txt  ModuleRouteHandler.cpp  ModuleRouteHandler.hpp
requests/: HTMLRequest.cpp  HTMLRequest.hpp  PHPRequest.cpp  PHPRequest.hpp
